semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser__failure__error_messages/bad6/error.txt
error: missing children
  --> rules/syntax/bad6.yaml:5
5 |       - pattern-either: "$X == $X"
  |         ^^^^^^^^^^^^^^

operator pattern-either must have children

run with --strict and there were 1 errors loading configs
